<resources>
    <string name="app_name">YoCapital</string>

    <!--    SECCIÓN INICIO-->
    <string name="vendedor_home_nombre">Hola, Juan Perez</string>
    <string name="vendedor_home_comisiones">Tus Comisiones (Este Mes)</string>
    <string name="vendedor_home_comisiones_valor">$7,783.00</string>
    <string name="vendedor_home_ventas_totales">Ventas\nTotales</string>
    <string name="vendedor_home_ventas_totales_valor">$20,000.40</string>

    <!--    SECCIÓN VENTAS-->
    <string name="vendedor_venta_venta">Agregar Venta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank 1111</string>
    <string name="hello_blank_fragment2">Hello blank 2222</string>
    <string name="titulo1_onboarding">BIENVENIDO A \n YOCAPITAL</string>
    <string name="texto_siguiente">Siguiente</string>
    <string name="titulo_login">Bienvenido</string>
    <string name="registro_titulo">Crear una Cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agregarCliente_titulo">Agregar Cliente</string>

</resources>